Fix height of body to prevent scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ body {
   flex-direction: column;
   display: flex;
   height: 100vh;
+  max-height: 900px;
 }
 
 li, ol, ul {
